# FractalTreeParallelization

./: .dockerignore  .gitignore  Dockerfile  Konkretan plan za diplomski.txt  README.md  THESIS_README.md  code-analysis.md  docker-compose.yml  fractal-tree-thesis.md  report.md  split_depth_analysis.md  thesis-phases.md  thesis.md
data/asymmetric/split_depth/: empirical_python.csv  empirical_rust.csv  theoretical_1.csv  theoretical_2.csv  theoretical_4.csv  theoretical_8.csv
data/asymmetric/strong/: python.csv  python_stats.csv  rust.csv  rust_stats.csv
data/asymmetric/weak/: python.csv  python_stats.csv  rust.csv  rust_stats.csv
data/experiments/: python_asymmetric_strong.csv  python_asymmetric_variable_angle.csv  python_asymmetric_variable_min_length.csv  python_asymmetric_variable_ratio.csv  python_strong.csv  python_symmetric_strong.csv  python_symmetric_variable_angle.csv  python_symmetric_variable_min_length.csv  python_symmetric_variable_ratio.csv  python_weak.csv  rust_strong.csv  rust_weak.csv
data/experiments/graphs/: optimal_split_asymmetric_2cores.csv  optimal_split_asymmetric_8cores.csv  optimal_split_symmetric_1cores.csv  optimal_split_symmetric_2cores.csv  strong_scaling_rust.csv  weak_scaling_python.csv  weak_scaling_rust.csv
data/output/: visualization.json
data/symmetric/split_depth/: optimal_split_symmetric_4cores.csv  optimal_split_symmetric_8cores.csv  theoretical_1.csv  theoretical_2.csv  theoretical_4.csv  theoretical_8.csv
data/symmetric/strong/: python.csv  python_stats.csv  rust.csv  rust_stats.csv
data/symmetric/weak/: python.csv  python_stats.csv  rust.csv  rust_stats.csv
python/: asymmetric_parallel.py  asymmetric_sequential.py  asymmetric_tree.py  parallel.py  parallel_asymmetric.py  pyproject.toml  sequential.py  sequential_asymmetric.py  symmetric_parallel.py  symmetric_sequential.py  tree-visualization.py  utils.py  visualize_tree.py
python/experiments/asymmetric/strong/: 1.py  2.py  4.py  8.py
python/experiments/asymmetric/variable/: angle.py  min_length.py  ratio.py  split_depth.py
python/experiments/asymmetric/weak/: 1.py  2.py  4.py  8.py
python/experiments/asymmetric_opt/strong/: 1.py  2.py  4.py  8.py
python/experiments/strong/: 1.py  2.py  4.py  8.py
python/experiments/symmetric/strong/: 1.py  2.py  4.py  8.py
python/experiments/symmetric/variable/: angle.py  min_length.py  ratio.py
python/experiments/symmetric/weak/: 1.py  2.py  4.py  8.py
python/experiments/weak/: 1.py  2.py  4.py  8.py
rust/: Cargo.toml
rust/experiments/asymmetric/: split_depth.rs
rust/experiments/asymmetric/strong/: 1.rs  2.rs  4.rs  8.rs
rust/experiments/asymmetric/weak/: 1.rs  2.rs  4.rs  8.rs
rust/experiments/asymmetric_opt/strong/: 1.rs  2.rs  4.rs  8.rs
rust/experiments/strong/: 1.rs  2.rs  4.rs  8.rs
rust/experiments/symmetric/weak/: 1.rs  2.rs  4.rs  8.rs
rust/experiments/weak/: 1.rs  2.rs  4.rs  8.rs
rust/src/: asymmetric_sequential.rs  lib.rs  parallel.rs  parallel_asymmetric.rs  sequential.rs  visualize.rs
scripts/: generate_graphs.py  run_experiments.py  run_experiments_asymmetric.py  run_experiments_symmetric.py  run_variable_experiments.py  theoretical_analysis.py
