[package]
name = "fractal_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
plotters = "0.3"

[[bin]]
name = "visualize"
path = "src/visualize.rs"

[[bin]]
name = "sequential"
path = "src/sequential.rs"

[[bin]]
name = "parallel"
path = "src/parallel.rs"

[[bin]]
name = "sequential_asymmetric"
path = "src/sequential_asymmetric.rs"

[[bin]]
name = "parallel_asymmetric"
path = "src/parallel_asymmetric.rs"

[[bin]]
name = "exp_strong_1"
path = "experiments/strong/1.rs"

[[bin]]
name = "exp_strong_2"
path = "experiments/strong/2.rs"

[[bin]]
name = "exp_strong_4"
path = "experiments/strong/4.rs"

[[bin]]
name = "exp_strong_8"
path = "experiments/strong/8.rs"

[[bin]]
name = "exp_weak_1"
path = "experiments/weak/1.rs"

[[bin]]
name = "exp_weak_2"
path = "experiments/weak/2.rs"

[[bin]]
name = "exp_weak_4"
path = "experiments/weak/4.rs"

[[bin]]
name = "exp_weak_8"
path = "experiments/weak/8.rs"

[[bin]]
name = "exp_asym_strong_1"
path = "experiments/asymmetric/strong/1.rs"

[[bin]]
name = "exp_asym_strong_2"
path = "experiments/asymmetric/strong/2.rs"

[[bin]]
name = "exp_asym_strong_4"
path = "experiments/asymmetric/strong/4.rs"

[[bin]]
name = "exp_asym_strong_8"
path = "experiments/asymmetric/strong/8.rs"

[[bin]]
name = "exp_asym_weak_1"
path = "experiments/asymmetric/weak/1.rs"

[[bin]]
name = "exp_asym_weak_2"
path = "experiments/asymmetric/weak/2.rs"

[[bin]]
name = "exp_asym_weak_4"
path = "experiments/asymmetric/weak/4.rs"

[[bin]]
name = "exp_asym_weak_8"
path = "experiments/asymmetric/weak/8.rs"
