[package]
name = "fractal_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
plotters = "0.3"

[[bin]]
name = "symmetric_sequential"
path = "src/symmetric_sequential.rs"

[[bin]]
name = "symmetric_parallel"
path = "src/symmetric_parallel.rs"

[[bin]]
name = "asymmetric_sequential"
path = "src/asymmetric_sequential.rs"

[[bin]]
name = "asymmetric_parallel"
path = "src/asymmetric_parallel.rs"

[[bin]]
name = "exp_strong_1"
path = "experiments/symmetric/strong/1.rs"

[[bin]]
name = "exp_strong_2"
path = "experiments/symmetric/strong/2.rs"

[[bin]]
name = "exp_strong_4"
path = "experiments/symmetric/strong/4.rs"

[[bin]]
name = "exp_strong_8"
path = "experiments/symmetric/strong/8.rs"

[[bin]]
name = "exp_weak_1"
path = "experiments/symmetric/weak/1.rs"

[[bin]]
name = "exp_weak_2"
path = "experiments/symmetric/weak/2.rs"

[[bin]]
name = "exp_weak_4"
path = "experiments/symmetric/weak/4.rs"

[[bin]]
name = "exp_weak_8"
path = "experiments/symmetric/weak/8.rs"

[[bin]]
name = "exp_asym_strong_1"
path = "experiments/asymmetric/strong/1.rs"

[[bin]]
name = "exp_asym_strong_2"
path = "experiments/asymmetric/strong/2.rs"

[[bin]]
name = "exp_asym_strong_4"
path = "experiments/asymmetric/strong/4.rs"

[[bin]]
name = "exp_asym_strong_8"
path = "experiments/asymmetric/strong/8.rs"

[[bin]]
name = "exp_asym_weak_1"
path = "experiments/asymmetric/weak/1.rs"

[[bin]]
name = "exp_asym_weak_2"
path = "experiments/asymmetric/weak/2.rs"

[[bin]]
name = "exp_asym_weak_4"
path = "experiments/asymmetric/weak/4.rs"

[[bin]]
name = "exp_asym_weak_8"
path = "experiments/asymmetric/weak/8.rs"

[[bin]]
name = "exp_asym_variable_split_depth"
path = "experiments/asymmetric/variable/split_depth.rs"
